--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
-<a class="internal-link" href="/index">Click here</a> to return home.
+Visit <a href="http://brandontoner.ca">brandontoner.ca</a>: <a href="http://brandontoner.ca/blog.opml">blog</a> | <a href="http://brandontoner.ca/hello.opml">about</a>
