update footer: add link to wiki

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
-Visit <a href="http://brandontoner.ca">brandontoner.ca</a>: <a href="http://brandontoner.ca/blog.opml">blog</a> | <a href="http://brandontoner.ca/hello.opml">about</a>
+<a href="http://brandontoner.ca">brandontoner.ca</a> | <a href="http://wiki.brandontoner.ca">wiki</a> | <a href="http://brandontoner.ca/blog.opml">blog</a> | <a href="http://brandontoner.ca/hello.opml">about</a>
